bad/add_invalid_types_bool_int.example_compiler_output
ERROR
[1mbad/add_invalid_types_bool_int.lat:3:7: [1;31merror: [0;1maddition is defined only for int values or string values, not `boolean` and `int`[m
	true + 11;
	     [1;32m^[m
